# waveform

./: .clangd  .gitignore  README.md  install.sh  meson.build  waveform.dbus.xml  waveform.desktop  waveform.gresource.xml  waveform.gschema.xml  waveform.mime.xml
include/: audio_stream.h  common.h  dbus.h  equaliser.h  playback.h  playlist.h  preferences.h  presets.h  visualiser.h
src/: audio_stream.c  dbus.c  equaliser.c  main.c  playback.c  playlist.c  preferences.c  presets.c  visualiser.c
src/ui/: preferences.blp  style.css  window.blp
subprojects/: SDL_mixer.wrap
subprojects/SDL_mixer/: meson.build  meson.options
subprojects/SDL_mixer/include/: SDL_mixer.h
subprojects/SDL_mixer/src/: mixer.c
